--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+/* body{
+  background: url('../public/Hero Section.jpg');
+} */
+
 
 .App-header {
   background-color: #282c34;
